--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "firebase": "^9.9.2",
     "framer-motion": "^7.2.0",
     "next": "12.2.5",
     "react": "18.2.0",
